refactor: padronizar nomenclaturas
